# AlgoEngineering

./: .gitignore  Cache-Aware and Cache-Oblivious Algorithms for String Sorting.md  Plan.md  README.md  ToDo.md  a.out  main.aux  main.tex  report.md  run_profiler.py  setup.md  string_sorting_beamer.aux  string_sorting_beamer.nav  string_sorting_beamer.tex  string_sorting_beamer.toc  test_perf.c  update_nbs.py
Algorithms/: __init__.py  baselines.py  benchmark.py  burstsort.py  cache_oblivious.py  common.py  radix.py
Analysis/: cache_aware_analysis.py  cache_aware_string_sorting.ipynb  cache_extra_plots_temp.py  cache_oblivious_string_sorting.ipynb  cache_profile.csv  cache_profile_analysis.py  cache_results.csv  dataset_time_per_char_fixed_n.csv  miss_rate_two_algo.csv  radix_depth.csv  radix_depth_vs_time.csv  results.csv  results_aggregated.csv  run_perf.sh  summary_best_at_largest_n.csv
TEAM_14/: download_data.py  main.tex  run_profiler.py  temp_plot.py  update_nbs.py
TEAM_14/cpp/: CMakeLists.txt
TEAM_14/cpp/src/algorithms/: burstsort.cpp  burstsort.hpp  radix.cpp
cpp/src/algorithms/: baselines.cpp  baselines.hpp  burstsort.cpp  burstsort.hpp  cache_oblivious.cpp  cache_oblivious.hpp  radix.cpp  radix.hpp
cpp/src/benchmark/: main.cpp
